# Agentic-Research-Copilot-for-Clinical-Documents

./: .env.example  .gitignore  LICENSE  Makefile  README.md  app.py  main.py  pyproject.toml
.streamlit/: config.toml
config/: settings.py
data/clinical_docs/: adverse_event_report_016.txt  adverse_event_report_017.txt  adverse_event_report_018.txt  adverse_event_report_019.txt  adverse_event_report_020.txt  adverse_event_report_021.txt  adverse_event_report_022.txt  adverse_event_report_023.txt  comparative_study_031.txt  comparative_study_032.txt  comparative_study_033.txt  comparative_study_034.txt  comparative_study_035.txt  comparative_study_036.txt  comparative_study_037.txt  comparative_study_038.txt  comparative_study_039.txt  comparative_study_040.txt  contradiction_comp_a_048.txt  contradiction_comp_b_049.txt  contradiction_negative_047.txt  contradiction_positive_046.txt  contradiction_safety_050.txt  dosing_study_024.txt  dosing_study_025.txt  dosing_study_026.txt  dosing_study_027.txt  dosing_study_028.txt  dosing_study_029.txt  dosing_study_030.txt  efficacy_trial_001.txt  efficacy_trial_002.txt  efficacy_trial_003.txt  efficacy_trial_004.txt  efficacy_trial_005.txt  efficacy_trial_006.txt  efficacy_trial_007.txt  efficacy_trial_008.txt  efficacy_trial_009.txt  efficacy_trial_010.txt  (+10 more)
scripts/: generate_sample_data.py
src/agents/: graph.py  nodes.py  state.py
src/evaluation/: eval_data_generator.py  evaluate.py
src/ingestion/: chunker.py  loader.py  vectorstore.py
src/retrieval/: retriever.py
